# crig

./: .gitignore  LICENSE  README.md  pyproject.toml  template.txt
src/clirig/: cli.py
src/crig/: cli.py
