[project]
name = "clirig"
version = "0.1.0"
description = "Text Tree Project Structure Generator"
authors = [{ name = "rwx610", email = "rwx610@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "cli",
    "scaffold",
    "structure",
    "tree",
    "template",
    "generator",
    "layout",
    "init",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/rwx610/clirig"
Repository = "https://github.com/rwx610/clirig"

# ВАЖНО: ДВЕ команды для CLI!
[project.scripts]
rig = "clirig.cli:entry_point"    # Короткая команда: rig
clirig = "clirig.cli:entry_point" # Полная команда: clirig

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
